Bug 142926 - On F1 / Help failure - No resolution path is identified for resolving errormesssage
Summary: On F1 / Help failure - No resolution path is identified for resolving errorme...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
7.1.3.2 release
Hardware: All All
: low trivial
Assignee: Rafael Lima
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2
Keywords:
: 134345 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-06-18 04:10 UTC by Paul Norman NZ
Modified: 2024-10-23 13:46 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Web page gives no obvius hint of how to resolve missing help files error message (169.12 KB, image/jpeg)
2021-06-18 04:10 UTC, Paul Norman NZ
Details
no local help installed pop-up (11.49 KB, image/png)
2021-06-18 14:10 UTC, V Stuart Foote
Details
Dialog with the new button (30.35 KB, image/png)
2023-08-04 02:45 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Norman NZ 2021-06-18 04:10:42 UTC
Created attachment 172994 [details]
Web page gives no obvius hint of how to resolve missing help files error message

​ In Writer (and presumably elsewhere) when the User taps the F1 key, or uses the Menu item: 
Help >> LibreOffice Help F1, 

desiring (or necessitating) to use a local version of Help, and where for whatever reason the necessary files are not yet locally available,

A dialogue box then appears which states..

``The LibreOffice built-in help for current UI language <<(English (UK))>> is not installed on your computer.
``You may either install it from our website or your system’s repositories, or read an online version.

However even electing to use the online help, does not present any obvious option for resolving the obtaining the offline files.

Neither the presented error alert message-box nor the Website offers any solution on how to resolve the missing help files.

Recommend that :—

Either:

the dialogue option: "Read Online Help" lead to both that, and a top option on that web page linking to, or explaining where to, obtain and how to install the offline files.

Or:

A third option button be added which facilitates the installation of the offline help files with available language selection options if necessary.

Whatever:

That the User not be left hanging without knowledge of how to resolve the problem (seems very <<insert name of a big corporation here>> in nature otherwise :-)
Comment 1 V Stuart Foote 2021-06-18 14:10:51 UTC
Created attachment 173007 [details]
no local help installed pop-up

It is perfectly clear on the download page that you may install "Help for offline use:". The locale appropriate links are presented there.

IMHO documentation is sufficient, and the UI delivers appropriate instructions.

Once clicking to use the default on-line help, why should notice need be given that an off-line version of help is available to be installed?

You made that choice when you installed.

IMHO => WF
Comment 2 Paul Norman NZ 2021-06-19 02:29:01 UTC
Thanks for those thoughts.

>"You made that choice when you installed."

Not true.

The problem is that like an enormous number of people now, I did not obtain my copy of LibreOffice through the download page, and so could never have seen the details mentioned about offline help being even available.

Their first encounter with fact is when trying to use LibreOffice Hlepo through th menu system or using the F1 key.

A clossal number of people now obtain LibreOffice thorugh other channels PortableApps, Choclatey (sp) ... etc and etc.

So as there is a definte place for people to go to get the local help files, smay I please continue to suggest that it is good design thinking to state that clearly in the dialogue box that appears when the online help system first fails?
 For example provide a link to the appropriate place where the problem can be efficently resolved - cearly and not vaguely stating that it is the offical download page that the User needds to go to?

>"IMHO documentation is sufficient, and the UI delivers appropriate instructions."

No I believe that the instructions are not sufficient as they are too vague, when a specific known lionk target does actually exist afterall.

"``You may either install it from our website or your system’s repositories ..."

Why not say where on the website ther is surely no problem with being accurate :-)

>"Once clicking to use the default on-line help, why should notice need be given
that an off-line version of help is available to be installed?"

This then again relates to the fact that as the User may never have even seen the donwload page, with its very helpful informaiton about opff-line help files being available, they will end up on the Online-help version, and it woud never hurt to have a small remonder that off-line help is available?

It is very valuable in many life situations to have access to offline help.

Thak you,
Paul
Comment 3 Rafael Lima 2022-01-07 18:25:47 UTC
Possible solutions IMO:

1) Add a third button to the dialog "Visit Download Page" that would directly link to:
https://www.libreoffice.org/download/download/

In this case, the code pointer is:
/core/sfx2/uiconfig/ui/helpmanual.ui

2) Create a new help page for "Installing Offline Help" or maybe simply create a new section in the main page:
https://help.libreoffice.org/7.2/en-US/text/shared/05/new_help.html

3) Do nothing, because the dialog already states that "You may either install it from our website..."

All of them are possible and quite simple to implement. I just do not know which of these (if any) would offer better user experience.
Comment 4 Rafael Lima 2023-07-26 12:36:22 UTC
Let's hear the opinion of the UX team.
Comment 5 Heiko Tietze 2023-07-27 08:39:20 UTC
Additional to the ideas in comment 3 we could add a button Install and run the show directly similarly to the tight integration of extensions (maybe make help an extension).

(In reply to Rafael Lima from comment #3)
> 1) Add a third button to the dialog "Visit Download Page"...
Better use a text-only link.

> 3) Do nothing, because the dialog already states that "You may either
> install it from our website..."
+1
Comment 6 Rafael Lima 2023-08-04 02:45:35 UTC
Created attachment 188758 [details]
Dialog with the new button

I tried the "button" approach... IMO it looks better than the link.

What do you think?

Proposed patch here:
https://gerrit.libreoffice.org/c/core/+/155298
Comment 7 Heiko Tietze 2023-08-15 12:31:34 UTC
(In reply to Rafael Lima from comment #6)
> I tried the "button" approach... IMO it looks better than the link.
> What do you think?

I don't like these button walls. Buttons are Help, Cancel, Okay, etc. and awkward if it requires reading. But it's not a bummer and if the doer decides anyway. So feel free to submit.
Comment 8 Heiko Tietze 2023-08-24 12:20:58 UTC
The topic was on the agenda of the design meeting but didn't receive further input. So ultimately the doer decides.
Comment 9 Mike Kaganski 2023-08-24 14:34:09 UTC
Note, that the only viable solution from the proposals here would be to have a link to a Wiki. Because depending on the package, help installation would be completely different:

* for TDF-supplied binaries, the additional website downloads would be needed;
* for e.g. PortableApps version, there is no package (workarounds exist [1]);
* for Linux distros, there are own packages, and TDF help packages won't work (and there are problems around use of browsers for local help, when sandboxed packages are used);
* I have no idea if it's even possible to install offline help for AppStores versions...

Having a link to download page would be confusing to ~100% Linux users, who largely use distro packages; and for many other users.

Some extensible mechanism could be thought of, with packager being able to define where to point the request...

[1] https://ask.libreoffice.org/t/how-to-get-offline-help-when-using-a-portableapps-version-of-libreoffice/83825
Comment 10 Rafael Lima 2023-08-24 16:15:10 UTC
(In reply to Mike Kaganski from comment #9)
> Note, that the only viable solution from the proposals here would be to have
> a link to a Wiki. Because depending on the package

Hi Mike, thanks for your input.

I was not very comfortable with the idea of redirecting to the Download page, so I was holding the patch back until further input.

I guess we could create a Help page about installing the offline help in each OS and then have a button or link in the dialog that redirects to this Help page.

Let me know what you all think of this idea.
Comment 11 Commit Notification 2023-12-14 12:18:31 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/help/commit/e99617c55d064c67d0caa82adb53925f5589c6bb

Related tdf#142926 Create help page about built-in help installation
Comment 12 Commit Notification 2023-12-14 14:10:52 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/help/commit/8a730f3601264c1c389599df9c0b8b4809fb6d9b

Related tdf#142926 Create help page about built-in help installation
Comment 13 Commit Notification 2023-12-15 17:18:20 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c48952eb6b6f65affcda75ee74c292008be9c455

tdf#142926 Add button to Download page in Help dialog box

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2023-12-19 19:00:34 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/help/commit/1afd64c6b742bcd7a1b0fd7d8bb16c7a54e91aa0

tdf#142926 Add HID to new Built-in help page
Comment 15 Buovjaga 2024-10-23 05:06:33 UTC
*** Bug 134345 has been marked as a duplicate of this bug. ***