tdf#142926 Add button to Download page in Help dialog box

Change-Id: Ie22dda17949d583a388d45e5aad3728b91637bff
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155298
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins
Reviewed-by: Rafael Lima <rafael.palma.lima@gmail.com>